# JNI

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/codearms/maoqiqi/jni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/codearms/maoqiqi/jni/: JNIDemo.kt  MainActivity.kt
app/src/test/java/com/codearms/maoqiqi/jni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
